CREATCMR-7467-fix